# grein_loader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yaml  test.yaml
src/grein_loader/: __init__.py  exceptions.py  load_dataset.py  load_overview.py  utils.py
tests/: test_dataset.py
