[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "grein_loader"
version = "0.0.4"
authors = [
  {name="Griss Lab", email="johannes.griss@meduniwien.ac.at"},
  {name="Alexander Grentner", email="alexander.grentner@meduniwien.ac.at"}
]
description = "Package for loading datasets from GREIN"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.urls]
"Homepage" = "https://github.com/grisslab/grein_loader"
"Bug Tracker" = "https://github.com/grisslab/grein_loader/issues"